--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,25 +1,35 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Day 1 - Wed, July 3rd</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>Registration and computer setup</td> </tr>
+      <tr> <td>13:30</td>  <td>Introducing to each other</td> </tr>
+      <tr> <td>14:00</td>  <td>Introducing Shell, navigating and working with file and directories, pipes and filters</td> </tr>
+      <tr> <td>15:30</td>  <td>Break</td> </tr>
+      <tr> <td>16:00</td>  <td>Loops, shell scripts, finding things</td> </tr>
+      <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
   </div>
+    <div class="col-md-6">
+    <h3>Day 2 - Thu, July 4th</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>  <td>Python </td> </tr>
+      <tr> <td>10:30</td>  <td>tba</td> </tr>
+      <tr> <td>12:00</td>  <td>tba</td> </tr>
+      <tr> <td>13:00</td>  <td>tba</td> </tr>
+      <tr> <td>14:30</td>  <td>tba</td> </tr>
+      <tr> <td>16:00</td>  <td>tba</td> </tr>
+      <tr> <td>16:40</td>  <td>END</td> </tr>
+    </table>
+  </div>
+</div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Day 2 - Thu, July 4th</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>10:30</td>  <td>tba</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
