--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1 - Wed, July 3rd</h3>
+    <h3>Day 1 - Shell -  Wed, July 3rd</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td>13:00</td>  <td>Registration and computer setup</td> </tr>
@@ -13,25 +13,26 @@
     </table>
   </div>
     <div class="col-md-6">
-    <h3>Day 2 - Thu, July 4th</h3>
+    <h3>Day 2 - Python - Thu, July 4th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Python </td> </tr>
-      <tr> <td>10:30</td>  <td>tba</td> </tr>
-      <tr> <td>12:00</td>  <td>tba</td> </tr>
-      <tr> <td>13:00</td>  <td>tba</td> </tr>
-      <tr> <td>14:30</td>  <td>tba</td> </tr>
-      <tr> <td>16:00</td>  <td>tba</td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  <td>Processing tabular data files. Repeating Actions with Loops.Storing Multiple Values in Lists </td> </tr>
+      <tr> <td>10:30</td>  <td>Break </td> </tr>
+      <tr> <td>11:00</td>  <td> Analyzing Data from Multiple Files. Making Choices</td> </tr>
+      <tr> <td>12:30</td>  <td>Break </td> </tr>
+      <tr> <td>14:00</td>  <td>Creating Functions.</td> </tr>
+      <tr> <td>16:00</td>  <td>Break</td> </tr>
+      <tr> <td>16:30</td>  <td> Errors and Exceptions. Debugging</td> </tr>
+      <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 3 - Fri, July 5th</h3>
+    <h3>Day 3 - Version control with Git - Fri, July 5th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>tba</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  <td>Automated Version Control. Setting Up Git. Creating a Repository. Tracking Changes . Exploring History. Ignoring Things </td> </tr>
+      <tr> <td>10:30</td>  <td>Break </td> </tr>
+      <tr> <td>11:00</td>  <td>Remotes in GitHub Collaborating. Conflicts. Open Science. Licensing . Citation. Hosting</td> </tr>
+      <tr> <td>12:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
   </div>
 
